tests/invalid/ListAccess_Invalid_1.whiley
import * from whiley.lang.*

function f([int] xs, real y) -> int:
    return xs[y]
